--- a/Changelog.html
+++ b/Changelog.html
@@ -37,6 +37,7 @@
               <p>-Added Changelog.html and TODO.html</p>
               <h5>Changed</h5>
               <p>-Revised README.md to use HTML instead of Markdown.</p>
+              <p>-<strong>{update: Added index.html to replace README.md</strong></p>
           </main>
       </body>
   </html>
