--- a/TODO.html
+++ b/TODO.html
@@ -12,7 +12,7 @@
                     <ul>
                         <li>Finish <a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's CSS tutorial</a>, and learn Bootstrap and/or React</li>
                         <li>Build an actual webpage with at least basic functionality. Ambitiously, a simple game. Ideally this will incorporate some or all elements of the tools I've learned.</li>
-                        <li>Entirely convert README.md to index.html for ease of use.</li>
+                        <li>Entirely convert README.md to index.html for ease of use. <strong>{Update: Completed this 09/09/2021</strong></li>
                         <li>Review a Git tutorial. I haven't had any major issues, but I'm not quite as comfortable with it as I'd like.</li>
                         <li>In general: I want to transition from mostly theoretical understanding to concrete work and experience.</li>
                     </ul>
