--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       <section>
         <article>
           <p>
-          I've recently converted this page from Markdown to HTML, so it's going to appear more barebones as I work on it, especially without knowledge of CSS (yet!). In the meantime, please enjoy this penguin, courtesy of Wikimedia.
+          I've recently converted this page from Markdown to HTML, so it's going to appear more barebones as I work on it, especially without knowledge of CSS (yet!).
+          </p>
+          <p>
+          In the meantime, please enjoy this penguin, courtesy of Wikimedia.
           </p>
         </article>
       </section>
