changed picture sizes, added alt text

--- a/Changelog.html
+++ b/Changelog.html
@@ -20,12 +20,12 @@
                 </ul>
               <h4>09/06/2021</h4>
               <p>-Completed <a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's Javascript tutorial</a></p>
-              <img src="./Javascript Complete_Linderman.png"/>
+              <img src="./Javascript Complete_Linderman.png" alt="92% Javascript completion" style="width:600px;height:400px;"/>
               <figcaption>Note: I had previously completed this tutorial about 2 years ago, but hadn't used Javascript since. Therefore, instead of fully completing the tutorial from "front-to-back", I jumped around a bit - I believe that's why my completion is not marked at 100%</figcaption>
               <br>
               <h4>09/08/2021</h4>
               <p>-Completed <a href="https://www.codecademy.com/learn/learn-html">Codecademy's HTML tutorial</a></p>
-              <img src="./HTML Complete_Linderman.png"/>
+              <img src="./HTML Complete_Linderman.png" alt="100% HTML completion" style="width:600px;height:400px;"/>
               <br>
               <h4>09/09/2021</h4>
               <h5>Added</h5>
