--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </article>
       </section>
       <figure>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" alt="A penguin. No, not Tux! This is a Rockhopper!" style="width:600px;height:1000px;"/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" alt="A penguin. No, not Tux! This is a Rockhopper!" style="width:400px;height:auto;"/>
         <figcaption>Like me, this bird is still learning to spread its wings and fly. Oh, wait...</figcaption>
       </figure>
       <section>
