--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <body>
     <header>
-        <title>Geoff Linderman's CISC275 Portfolio </title>
+        <title>CISC275 Portfolio Linderman </title>
+        <h2>Geoff Linderman's CISC275 Portfolio</h2>
         <a href="https://github.com/glinderm/CISC275.github.io">Check out my repository!</a>
     </header>
     <main>
