added CSS certificate to changelog

--- a/Changelog.html
+++ b/Changelog.html
@@ -37,6 +37,12 @@
               <p>-Added Changelog.html and TODO.html</p>
               <h5>Changed</h5>
               <p>-Revised README.md to use HTML instead of Markdown.</p>
+              <br>
+              <h4>09/14/2021</h4>
+              <h5>Added</h5>
+              <p>-Completed <a href="https://www.codecademy.com/learn/learn-css">Codecademy's CSS tutorial</a></p>
+              <img src="./media/CSS Complete_Linderman.png" style="width:400px;height:auto;"/>
+              <br>
           </main>
       </body>
   </html>
