--- a/Changelog.html
+++ b/Changelog.html
@@ -7,42 +7,66 @@
               <p>All notable changes to this portfolio will be documented in this file.</p>
           </header>
           <main>
-              <h4>08/31/2021</h4>
-              <p>Installed NodeJS</p>
-              <p>Installed and completed Hello, World in Typescript</p>
-              <p>Installed VSCode and the following extensions:</p>
-                <ul>
-                    <li>Andromeda</li>
-                    <li>ESLint</li>
-                    <li>GitLens</li>
-                    <li>Prettier</li>
-                    <li>vscode-icons</li>
-                </ul>
-              <h4>09/06/2021</h4>
-              <p>-Completed <a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's Javascript tutorial</a></p>
-              <img src="./media/Javascript Complete_Linderman.png" style="width:400px;height:auto;"/>
-              <figcaption>Note: I had previously completed this tutorial about 2 years ago, but hadn't used Javascript since. Therefore, instead of fully completing the tutorial from "front-to-back", I jumped around a bit - I believe that's why my completion is not marked at 100%</figcaption>
-              <br>
-              <h4>09/08/2021</h4>
-              <p>-Completed <a href="https://www.codecademy.com/learn/learn-html">Codecademy's HTML tutorial</a></p>
-              <img src="./media/HTML Complete_Linderman.png" style="width:400px;height:auto;"/>
-              <br>
-              <h4>09/09/2021</h4>
-              <h5>Added</h5>
-              <p>-Began learning CSS with the following resources:</p>
-              <ul>
-                  <li><a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's CSS tutorial</a></li>
-                  <li><a href="https://marksheet.io">Syllabus-recommended tutorial</a></li>
-              </ul>
-              <p>-Added Changelog.html and TODO.html</p>
-              <h5>Changed</h5>
-              <p>-Revised README.md to use HTML instead of Markdown.</p>
-              <br>
-              <h4>09/14/2021</h4>
-              <h5>Added</h5>
-              <p>-Completed <a href="https://www.codecademy.com/learn/learn-css">Codecademy's CSS tutorial</a></p>
-              <img src="./media/CSS Complete_Linderman.png" style="width:400px;height:auto;"/>
-              <br>
+              <div id="milestone1">
+                <h2>Milestone 1</h2>
+                <div class="added">
+                    <h3>Added</h3>
+                    <h4>08/31/2021</h4>
+                    <p>Installed NodeJS</p>
+                    <p>Installed and completed Hello, World in Typescript</p>
+                    <p>Installed VSCode and the following extensions:</p>
+                        <ul>
+                            <li>Andromeda</li>
+                            <li>ESLint</li>
+                            <li>GitLens</li>
+                            <li>Prettier</li>
+                            <li>vscode-icons</li>
+                        </ul>
+                    <h4>09/06/2021</h4>
+                    <p>-Completed <a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's Javascript tutorial</a></p>
+                    <img src="./media/Javascript Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <figcaption>Note: I had previously completed this tutorial about 2 years ago, but hadn't used Javascript since. Therefore, instead of fully completing the tutorial from "front-to-back", I jumped around a bit - I believe that's why my completion is not marked at 100%</figcaption>
+                    <br>
+                    <h4>09/08/2021</h4>
+                    <p>-Completed <a href="https://www.codecademy.com/learn/learn-html">Codecademy's HTML tutorial</a></p>
+                    <img src="./media/HTML Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <br>
+                    <h4>09/09/2021</h4>
+                    <p>-Began learning CSS with the following resources:</p>
+                    <ul>
+                        <li><a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's CSS tutorial</a></li>
+                        <li><a href="https://marksheet.io">Syllabus-recommended tutorial</a></li>
+                    </ul>
+                    <p>-Added Changelog.html and TODO.html</p>
+                    <br>
+                </div>
+                <div class="changed">
+                    <h3>Changed</h3>
+                    <p>-Revised README.md to use HTML instead of Markdown.</p>
+                    <br>
+                </div>
+              </div>
+              <div id="milestone2">
+                <h2>Milestone 2</h2>
+                <div class="added">
+                    <h3>Added</h3>
+                    <h4>09/14/2021</h4>
+                    <p>-Completed <a href="https://www.codecademy.com/learn/learn-css">Codecademy's CSS tutorial</a></p>
+                    <img src="./media/CSS Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <br>
+                    <p>-Added media folder to source.</p>
+                    <h4>09/16/2021</h4>
+                    <p>-Completed <a href="https://www.codecademy.com/learn/learn-bootstrap">Codecademy's Bootstrap tutorial</a></p>
+                    <img src="./media/Bootstrap Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <br>
+                </div>
+                <div class="changed">
+                    <h3>Changed</h3>
+                    <h4>09/16/2021</h4>
+                    <p>-Revised changelog.html layout.</p>
+                    <br>
+                </div>
+              </div>
           </main>
       </body>
   </html>
