updated changelog w/ index replacing readme

--- a/Changelog.html
+++ b/Changelog.html
@@ -39,9 +39,12 @@
                     </ul>
                     <p>-Added Changelog.html and TODO.html</p>
                     <br>
+                    <p>-Added index.html as main page file</p>
+                    <br>
                 </div>
                 <div class="changed">
                     <h3>Changed</h3>
+                    <h4>09/09/2021</h4>
                     <p>-Revised README.md to use HTML instead of Markdown.</p>
                     <br>
                 </div>
@@ -62,6 +65,9 @@
                 </div>
                 <div class="changed">
                     <h3>Changed</h3>
+                    <h4>09/14/2021</h4>
+                    <p>-Removed Readme.md.</p>
+                    <br>
                     <h4>09/16/2021</h4>
                     <p>-Revised changelog.html layout.</p>
                     <br>
