--- a/index.html
+++ b/index.html
@@ -4,41 +4,101 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Portfolio (Linderman)</title>
+    <title>CISC275 Portfolio (Linderman)</title>
   </head>
   <body>
-    <header>
-        <title>CISC275 Portfolio Linderman </title>
-        <h2>Geoff Linderman's CISC275 Portfolio</h2>
-        <a href="https://github.com/glinderm/CISC275.github.io">Check out my repository!</a>
-    </header>
-    <main>
-      <section>
-        <article>
-          <p>
-          I've recently converted this page from Markdown to HTML, so it's going to appear more barebones as I work on it, especially without knowledge of CSS (yet!).
-          </p>
-          <p>
-          In the meantime, please enjoy this penguin, courtesy of Wikimedia.
-          </p>
-        </article>
-      </section>
-      <figure>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" alt="A penguin. No, not Tux! This is a Rockhopper!" style="width:400px;height:auto;"/>
-        <figcaption>Like me, this bird is still learning to spread its wings and fly. Oh, wait...</figcaption>
-      </figure>
-      <section>
-        <article>
-          <h2>Change Log & TODO</h2>
-          <ul>
-            <li><a href="./Changelog.html">Change Log</a></li>
-            <li><a href="./TODO.html">TODO</a></li>
-          </ul>
-        </article>
-      </section>
-    </main>
-    <footer>
-      <p>Contact: glindy@udel.edu</p>
-    </footer>
+    <div class='header'>
+      <h2>Geoff Linderman's CISC275 Portfolio</h2>
+      <a href="https://github.com/glinderm/CISC275.github.io">Check out my repository!</a>
+    </div>
+    <nav class='navbar navbar-expand navbar-light' style='background-color:mediumaquamarine' >
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSide" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSide">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/">Portfolio<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack.html">Play Blackjack</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/Changelog.html">Changelog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/TODO.html">TODO</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class='container'>
+      <div class="row">
+        <div class="col-lg-2 page-border">
+
+        </div>
+        <div class='col-lg-9 page-main'>
+          <div class='row'>
+            <div class="col-lg-8">
+              <div>
+                <p>
+                I've recently converted this page from Markdown to HTML, so it's going to appear more barebones as I work on it, especially without knowledge of CSS (yet!).
+                </p>
+                <p>
+                In the meantime, please enjoy these penguins, courtesy of Wikimedia.
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div id="penguinSlidesControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Penguins_walking_-Moltke_Harbour%2C_South_Georgia%2C_British_overseas_territory%2C_UK-8.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Emperor-pubs_hg.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/EmperorPenguinChick.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#penguinSlidesControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#penguinSlidesControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div>
+              <h2>Change Log & TODO</h2>
+              <ul>
+                <li><a href="./Changelog.html">Change Log</a></li>
+                <li><a href="./TODO.html">TODO</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class='col-lg-1 page-border'>
+
+        </div>
+      </div>
+    </div>
+    <div class='footer'>
+      <a>glindy@udel.edu</a>
+    </div>
   </body>
 </html>
