--- a/TODO.html
+++ b/TODO.html
@@ -9,6 +9,27 @@
         <title>TODO (Linderman)</title>
     </head>
     <body>
+        <nav class='navbar navbar-expand navbar-light' style='background-color:mediumaquamarine' >
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSide" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSide">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/">Portfolio<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack.html">Play Blackjack</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/Changelog.html">Changelog</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/TODO.html">TODO</a>
+                </li>
+                </ul>
+            </div>
+        </nav>
         <header>
             <h2>TODO</h2>
             <a href="https://glinderm.github.io/CISC275.github.io/">Geoff Linderman's Portfolio</a>
