--- a/blackjack.html
+++ b/blackjack.html
@@ -31,9 +31,21 @@
             <header>
                 <h2>Pick a card!</h2>
             </header>
-            <main>
+            <div class='container'>
+                <div class='row'>
+                    <div class='col-lg-4'>
 
-            </main>
+                    </div>
+                    <div class='col-lg-4'>
+                        <button class='btn btn-info'>
+                            Draw a card!
+                        </button>
+                    </div>
+                    <div class='col-lg-4'>
+
+                    </div>
+                </div>
+            </div>
             <footer>
                 
             </footer>
