--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class='container'>
       <div class="row">
         <div class="col-lg-2 page-border">
-
+          <!-- left sidebar, colored blue, space for navbar -->
         </div>
         <div class='col-lg-9 page-main'>
           <div class='row'>
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class='col-lg-1 page-border'>
-
+          <!-- right sidebar, colored blue -->
         </div>
       </div>
     </div>
