--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
       </div>
     </div>
-    <div class='footer'>
+    <div class="footer">
       <a>glindy@udel.edu</a>
     </div>
   </body>
