updated TODO, added CSS ref

--- a/Changelog.html
+++ b/Changelog.html
@@ -6,6 +6,7 @@
      
         <!-- Bootstrap CSS for styling and layout-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="./styles/style.css">
         <title>Changelog (Linderman)</title>
     </head>
     <body>
@@ -19,7 +20,7 @@
                 <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/">Portfolio<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack.html">Play Blackjack</a>
+                <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack/blackjack.html">Play Blackjack</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/Changelog.html">Changelog</a>
@@ -38,69 +39,74 @@
         <main>
             <div id="milestone1">
             <h2>Milestone 1</h2>
-            <div class="added">
-                <h3>Added</h3>
-                <h4>08/31/2021</h4>
-                <p>Installed NodeJS</p>
-                <p>Installed and completed Hello, World in Typescript</p>
-                <p>Installed VSCode and the following extensions:</p>
+                <div class="added">
+                    <h3>Added</h3>
+                    <h4>08/31/2021</h4>
+                    <p>Installed NodeJS</p>
+                    <p>Installed and completed Hello, World in Typescript</p>
+                    <p>Installed VSCode and the following extensions:</p>
+                        <ul>
+                            <li>Andromeda</li>
+                            <li>ESLint</li>
+                            <li>GitLens</li>
+                            <li>Prettier</li>
+                            <li>vscode-icons</li>
+                        </ul>
+                    <h4>09/06/2021</h4>
+                    <p>-Completed <a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's Javascript tutorial</a></p>
+                    <img src="./media/Javascript Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <figcaption>Note: I had previously completed this tutorial about 2 years ago, but hadn't used Javascript since. Therefore, instead of fully completing the tutorial from "front-to-back", I jumped around a bit - I believe that's why my completion is not marked at 100%</figcaption>
+                    <br>
+                    <h4>09/08/2021</h4>
+                    <p>-Completed <a href="https://www.codecademy.com/learn/learn-html">Codecademy's HTML tutorial</a></p>
+                    <img src="./media/HTML Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <br>
+                    <h4>09/09/2021</h4>
+                    <p>-Began learning CSS with the following resources:</p>
                     <ul>
-                        <li>Andromeda</li>
-                        <li>ESLint</li>
-                        <li>GitLens</li>
-                        <li>Prettier</li>
-                        <li>vscode-icons</li>
+                        <li><a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's CSS tutorial</a></li>
+                        <li><a href="https://marksheet.io">Syllabus-recommended tutorial</a></li>
                     </ul>
-                <h4>09/06/2021</h4>
-                <p>-Completed <a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's Javascript tutorial</a></p>
-                <img src="./media/Javascript Complete_Linderman.png" style="width:400px;height:auto;"/>
-                <figcaption>Note: I had previously completed this tutorial about 2 years ago, but hadn't used Javascript since. Therefore, instead of fully completing the tutorial from "front-to-back", I jumped around a bit - I believe that's why my completion is not marked at 100%</figcaption>
-                <br>
-                <h4>09/08/2021</h4>
-                <p>-Completed <a href="https://www.codecademy.com/learn/learn-html">Codecademy's HTML tutorial</a></p>
-                <img src="./media/HTML Complete_Linderman.png" style="width:400px;height:auto;"/>
-                <br>
-                <h4>09/09/2021</h4>
-                <p>-Began learning CSS with the following resources:</p>
-                <ul>
-                    <li><a href="https://www.codecademy.com/learn/introduction-to-javascript">Codecademy's CSS tutorial</a></li>
-                    <li><a href="https://marksheet.io">Syllabus-recommended tutorial</a></li>
-                </ul>
-                <p>-Added Changelog.html and TODO.html</p>
-                <br>
-                <p>-Added index.html as main page file</p>
-                <br>
-            </div>
-            <div class="changed">
-                <h3>Changed</h3>
-                <h4>09/09/2021</h4>
-                <p>-Revised README.md to use HTML instead of Markdown.</p>
-                <br>
-            </div>
+                    <p>-Added Changelog.html and TODO.html</p>
+                    <br>
+                    <p>-Added index.html as main page file</p>
+                    <br>
+                </div>
+                <div class="changed">
+                    <h3>Changed</h3>
+                    <h4>09/09/2021</h4>
+                    <p>-Revised README.md to use HTML instead of Markdown.</p>
+                    <br>
+                </div>
             </div>
             <div id="milestone2">
-            <h2>Milestone 2</h2>
-            <div class="added">
-                <h3>Added</h3>
-                <h4>09/14/2021</h4>
-                <p>-Completed <a href="https://www.codecademy.com/learn/learn-css">Codecademy's CSS tutorial</a></p>
-                <img src="./media/CSS Complete_Linderman.png" style="width:400px;height:auto;"/>
-                <br>
-                <p>-Added media folder to source.</p>
-                <h4>09/16/2021</h4>
-                <p>-Completed <a href="https://www.codecademy.com/learn/learn-bootstrap">Codecademy's Bootstrap tutorial</a></p>
-                <img src="./media/Bootstrap Complete_Linderman.png" style="width:400px;height:auto;"/>
-                <br>
-            </div>
-            <div class="changed">
-                <h3>Changed</h3>
-                <h4>09/14/2021</h4>
-                <p>-Removed Readme.md.</p>
-                <br>
-                <h4>09/16/2021</h4>
-                <p>-Revised changelog.html layout.</p>
-                <br>
-            </div>
+                <h2>Milestone 2</h2>
+                <div class="added">
+                    <h3>Added</h3>
+                    <h4>09/14/2021</h4>
+                    <p>-Completed <a href="https://www.codecademy.com/learn/learn-css">Codecademy's CSS tutorial</a></p>
+                    <img src="./media/CSS Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <br>
+                    <p>-Added media folder to source.</p>
+                    <h4>09/16/2021</h4>
+                    <p>-Completed <a href="https://www.codecademy.com/learn/learn-bootstrap">Codecademy's Bootstrap tutorial</a></p>
+                    <img src="./media/Bootstrap Complete_Linderman.png" style="width:400px;height:auto;"/>
+                    <br>
+                </div>
+                <div class="changed">
+                    <h3>Changed</h3>
+                    <h4>09/14/2021</h4>
+                    <p>-Removed Readme.md.</p>
+                    <br>
+                    <h4>09/16/2021</h4>
+                    <p>-Revised changelog.html layout.</p>
+                    <br>
+                </div>
+                <div class='notes'>
+                    <h3>Notes</h3>
+                    <p>I may have been too ambitious in my last TODO - specifically, I had trouble both building a game in Javascript and implementing a visual interface for it. Going forward, I'll plan to continue working on this project.</p>
+                    <p>I found CSS layout (and Bootstrap) simple in concept, but complicated and a bit frustrating when applied to an entire page (or more). I'd hoped to set up a simple but clean layout for my page, but I've had to settle for smaller improvements. Likely, I tried to do too much at once, and should instead work on a plan for specific items.</p>
+                </div>
             </div>
         </main>
     </body>
