--- a/TODO.html
+++ b/TODO.html
@@ -6,6 +6,7 @@
      
         <!-- Bootstrap CSS for styling and layout-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="./styles/style.css">
         <title>TODO (Linderman)</title>
     </head>
     <body>
@@ -19,7 +20,7 @@
                     <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/">Portfolio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack.html">Play Blackjack</a>
+                    <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack/blackjack.html">Play Blackjack</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/Changelog.html">Changelog</a>
@@ -32,10 +33,10 @@
         </nav>
         <header>
             <h2>TODO</h2>
-            <a href="https://glinderm.github.io/CISC275.github.io/">Geoff Linderman's Portfolio</a>
         </header>
-        <main>
-            <section>
+        <div>
+            <div>
+                <h4>Milestone 1</h4>
                 <article>
                     <h4>My plans for next week:</h4>
                     <ul>
@@ -46,7 +47,27 @@
                         <li>In general: I want to transition from mostly theoretical understanding to concrete work and experience.</li>
                     </ul>
                 </article>
-            </section>
-        </main>
+                <br>
+                <br>
+            </div>
+            <div>
+                <h4>Milestone 2</h4>
+                <article>
+                    <h4>My plans for next week:</h4>
+                    <ul>
+                        <li>Begin learning React - I've seen multiple resources shared, so I can't pinpoint which I'll start with, but I feel this is a key feature to get comfortable with next. Given its clear complexity and scope, I don't expect to have mastered it in any capacity by next week, but I want at least basic familiarity sooner than later.</li>
+                        <li>Complete a Typescript tutorial, likely <a href="https://www.codecademy.com/learn/learn-typescript">Codecademy's</a>.</li>
+                        <li>As a note on the above, I've mostly relied on Codecademy for my basic introduction, then branched out to other resources when I begin implementing. I generally like Codecademy because its format lets me quickly jump in to learning-by-doing, without needing to set much up. But for at least React, I'd like to break that pattern, just to keep my experience varied.</li>
+                        <li>Blackjack: For next week, I want to get the underlying Javascript for the game more or less hammered out, even if it's not implemented as an interactable game on the page. I think I was too ambitious originally, so I want to break the plan into more specific chunks, and worry about the visual component later.</li>
+                        <li>Set up Changelog and TODO with collapsible sections for each Milestone. If possible, also make Changelog's individual sections (Added, Changed, Notes) collapsible as well.</li>
+                        <li>Style and Layout: Aesthetics aren't my strongest suit, but I want to spend some time sketching (maybe literally) my website's design, and thinking over its general styling and 'vibe'. This week I felt confident in my CSS and Bootstrap fundamentals, but without a plan it ended up feeling chaotic and unstructured.</li>
+                        <li>Layout, continued: I also, badly, need to revisit my core HTML code and structure. What seemed reasonable even a week ago now drives me crazy, especially with the addition of CSS and Bootstrap to my repetoire.</li>
+                        <li>General plan: I'm going to focus on specific, bite-sized pieces of projects to avoid getting lost or bogged down. The same will go for tutorials, especially React - if I begin lagging, I want to force myself to pivot toward something I can make progress on instead.</li>
+                    </ul>
+                </article>
+                <br>
+                <br>
+            </div>
+        </div>
     </body>
 </html>
