updated layout for header, footer, navbar

--- a/TODO.html
+++ b/TODO.html
@@ -20,6 +20,9 @@
                     <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/">Portfolio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="https://github.com/glinderm/CISC275.github.io">Repository</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack/blackjack.html">Play Blackjack</a>
                 </li>
                 <li class="nav-item">
