--- a/blackjack/blackjack.html
+++ b/blackjack/blackjack.html
@@ -17,6 +17,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/">Portfolio<span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="https://github.com/glinderm/CISC275.github.io">Repository</a>
+                    </li>
                     <li class="nav-item active">
                       <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack/blackjack.html">Play Blackjack</a>
                     </li>
