--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <title>CISC275 Portfolio (Linderman)</title>
   </head>
   <body>
-    <div class='header'>
-      <h2>Geoff Linderman's CISC275 Portfolio</h2>
-      <a href="https://github.com/glinderm/CISC275.github.io">Check out my repository!</a>
-    </div>
     <nav class='navbar navbar-expand navbar-light' style='background-color:mediumaquamarine' >
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSide" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,6 +16,9 @@
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/">Portfolio<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/glinderm/CISC275.github.io">Repository</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/blackjack/blackjack.html">Play Blackjack</a>
@@ -34,6 +33,11 @@
       </div>
     </nav>
     <div class='container'>
+      <div class='row header'>
+        <div class='col'>  
+          <h2>Geoff Linderman's CISC275 Portfolio</h2>
+        </div>
+      </div>
       <div class="row">
         <div class="col-lg-2 page-border">
           <!-- left sidebar, colored blue, space for navbar -->
@@ -83,23 +87,16 @@
               </div>
             </div>
           </div>
-          <div class="row">
-            <div>
-              <h2>Change Log & TODO</h2>
-              <ul>
-                <li><a href="./Changelog.html">Change Log</a></li>
-                <li><a href="./TODO.html">TODO</a></li>
-              </ul>
-            </div>
-          </div>
         </div>
         <div class='col-lg-1 page-border'>
           <!-- right sidebar, colored blue -->
         </div>
       </div>
-    </div>
-    <div class="footer">
-      <a>glindy@udel.edu</a>
+      <div class="row footer">
+        <div class="col">
+          <a>glindy@udel.edu</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
