--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-2 page-border">
+        <div class="col-2 page-border">
           <!-- left sidebar, colored blue, space for navbar -->
         </div>
-        <div class='col-lg-9 page-main'>
+        <div class='col-9 page-main'>
           <div class='row'>
-            <div class="col-lg-8">
+            <div class="col-8">
               <div>
                 <p>
                 I've recently converted this page from Markdown to HTML, so it's going to appear more barebones as I work on it, especially without knowledge of CSS (yet!).
@@ -54,7 +54,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-4">
               <div id="penguinSlidesControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-        <div class='col-lg-1 page-border'>
+        <div class='col1 page-border'>
           <!-- right sidebar, colored blue -->
         </div>
       </div>
