--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       </div>
     </nav>
     <div class='container'>
-      <div class='row header'>
+      <div class='row w-100 header'>
         <div class='col'>  
           <h2>Geoff Linderman's CISC275 Portfolio</h2>
         </div>
       </div>
-      <div class="row">
+      <div class="row h-100 h-100">
         <div class="col-2 page-border">
           <!-- left sidebar, colored blue, space for navbar -->
         </div>
@@ -92,7 +92,7 @@
           <!-- right sidebar, colored blue -->
         </div>
       </div>
-      <div class="row footer">
+      <div class="row w-100 footer">
         <div class="col">
           <a>glindy@udel.edu</a>
         </div>
