--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-2 page-border">
+        <div class="col-1 page-border">
           <!-- left sidebar, colored blue, space for navbar -->
         </div>
         <div class='col-9 page-main'>
@@ -58,22 +58,22 @@
               <div id="penguinSlidesControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block w-100" alt="...">
+                    <a href="https://upload.wikimedia.org/wikipedia/commons/e/ee/Gorfou_sauteur_-_Rockhopper_Penguin.jpg" class="d-block w-100" alt="..."></a>
                   </div>
                   <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Penguins_walking_-Moltke_Harbour%2C_South_Georgia%2C_British_overseas_territory%2C_UK-8.jpg" class="d-block w-100" alt="...">
+                    <a href="https://upload.wikimedia.org/wikipedia/commons/9/9e/Penguins_walking_-Moltke_Harbour%2C_South_Georgia%2C_British_overseas_territory%2C_UK-8.jpg" class="d-block w-100" alt="..."></a>
                   </div>
                   <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Emperor-pubs_hg.jpg" class="d-block w-100" alt="...">
+                    <a href="https://upload.wikimedia.org/wikipedia/commons/f/f0/Emperor-pubs_hg.jpg" class="d-block w-100" alt="..."></a>
                   </div>
                   <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/EmperorPenguinChick.jpg" class="d-block w-100" alt="...">
+                    <a href="https://upload.wikimedia.org/wikipedia/commons/2/25/EmperorPenguinChick.jpg" class="d-block w-100" alt="..."></a>
                   </div>
                   <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100" alt="...">
+                    <a href="https://upload.wikimedia.org/wikipedia/commons/5/5c/Aptenodytes_patagonicus_-Asahiyama_Zoo_%282008.9.13%29_270.jpg" class="d-block w-100" alt="..."></a>
                   </div>
                   <div class="carousel-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-100" alt="...">
+                    <a href="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="d-block w-100" alt="..."></a>
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#penguinSlidesControls" role="button" data-slide="prev">
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-        <div class='col1 page-border'>
+        <div class='col-1 page-border'>
           <!-- right sidebar, colored blue -->
         </div>
       </div>
