--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSide" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSide">
+      <div class="collapse navbar-collapse" id="navbarMain">
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="https://glinderm.github.io/CISC275.github.io/">Portfolio<span class="sr-only">(current)</span></a>
@@ -39,22 +39,19 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-1 page-border">
-          <!-- left sidebar, colored blue, space for navbar -->
-        </div>
-        <div class='col-9 page-main'>
+        <div class='col page-main'>
           <div class='row'>
-            <div class="col-8">
+            <div class="col-7">
               <div>
-                <p>
+                <p class="page-main">
                 I've recently converted this page from Markdown to HTML, so it's going to appear more barebones as I work on it, especially without knowledge of CSS (yet!).
                 </p>
-                <p>
+                <p class="page-main">
                 In the meantime, please enjoy these penguins, courtesy of Wikimedia.
                 </p>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-5">
               <div id="penguinSlidesControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -88,11 +85,8 @@
             </div>
           </div>
         </div>
-        <div class='col-1 page-border'>
-          <!-- right sidebar, colored blue -->
-        </div>
       </div>
-      <div class="row footer">
+      <div class="row-fluid footer">
         <div class="col">
           <a>glindy@udel.edu</a>
         </div>
