modified blackjack, adding tests

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
         </div>
       </div>
-      <div class="row-fluid footer">
+      <div class="row footer">
         <div class="col">
           <a>glindy@udel.edu</a>
         </div>
