functionality for blackjack.html, deck of card pix

--- a/blackjack/blackjack.html
+++ b/blackjack/blackjack.html
@@ -38,12 +38,16 @@
             <div class='container'>
                 <div class='row'>
                     <div class='col-lg-4'>
-
+                      <form>
+                        <label for='playerName'>Name:</label><br>
+                        <input type = 'test' id='playerName' name = 'playerName'><br>
+                      </form>
                     </div>
                     <div class='col-lg-4'>
-                        <button class='btn btn-info'>
-                            Draw a card!
-                        </button>
+                      <img src="./media/deckofcards/card_back.png" id='shownCard' alt='deck of cards'/>
+                      <button class='btn btn-info' id='getCardBtn'>
+                          Draw a card!
+                      </button>
                     </div>
                     <div class='col-lg-4'>
 
