--- a/blackjack/blackjack.html
+++ b/blackjack/blackjack.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-            <link rel="stylesheet" href="./styles/style.css">
+            <link rel="stylesheet" href="https://github.com/glinderm/CISC275.github.io/tree/main/styles/style.css">
             <title>Blackjack (Linderman)</title>
         </head>
         <body>
@@ -44,7 +44,7 @@
                       </form>
                     </div>
                     <div class='col-lg-4'>
-                      <img src="./media/deckofcards/card_back.png" id='shownCard' alt='deck of cards'/>
+                      <img src="https://github.com/glinderm/CISC275.github.io/tree/main/media/deckofcards/card_back.png" id='shownCard' alt='deck of cards'/>
                       <button class='btn btn-info' id='getCardBtn'>
                           Draw a card!
                       </button>
