linked blackjack.html to blackjack.js with script

--- a/blackjack/blackjack.html
+++ b/blackjack/blackjack.html
@@ -5,6 +5,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
             <link rel="stylesheet" href="https://github.com/glinderm/CISC275.github.io/tree/main/styles/style.css">
+            <script type="text/javascript" src="./blackjack.js"></script>
             <title>Blackjack (Linderman)</title>
         </head>
         <body>
@@ -37,19 +38,20 @@
             </header>
             <div class='container'>
                 <div class='row'>
-                    <div class='col-lg-4'>
+                    <div class='col-lg-3'>
                       <form>
                         <label for='playerName'>Name:</label><br>
                         <input type = 'test' id='playerName' name = 'playerName'><br>
                       </form>
                     </div>
-                    <div class='col-lg-4'>
+                    <div class='col-lg-8'>
                       <img src="https://github.com/glinderm/CISC275.github.io/tree/main/media/deckofcards/card_back.png" id='shownCard' alt='deck of cards'/>
+                      <br>
                       <button class='btn btn-info' id='getCardBtn'>
                           Draw a card!
                       </button>
                     </div>
-                    <div class='col-lg-4'>
+                    <div class='col-lg-1'>
 
                     </div>
                 </div>
