corrected function declaration order, img address

--- a/blackjack/blackjack.html
+++ b/blackjack/blackjack.html
@@ -45,7 +45,7 @@
                       </form>
                     </div>
                     <div class='col-lg-8'>
-                      <img src="https://github.com/glinderm/CISC275.github.io/tree/main/media/deckofcards/card_back.png" id='shownCard' alt='deck of cards'/>
+                      <img src="../media/deckofcards/card_back.png" id='shownCard' alt='deck of cards'/>
                       <br>
                       <button class='btn btn-info' id='getCardBtn'>
                           Draw a card!
