added collapsing to changelog milestone sections

--- a/Changelog.html
+++ b/Changelog.html
@@ -39,8 +39,10 @@
             <p>All notable changes to this portfolio will be documented in this file.</p>
         </header>
         <main>
-            <div id="milestone1">
-            <h2>Milestone 1</h2>
+            <p>
+                <button class='btn btn-primary' type='button' data-toggle='collapse' data-target='#milestone1' aria-expanded='false' aria-controls='milestone1'><h2>Milestone 1</h2></button>
+            </p>
+            <div class='collapse' id="milestone1">
                 <div class="added">
                     <h3>Added</h3>
                     <h4>08/31/2021</h4>
@@ -81,8 +83,10 @@
                     <br>
                 </div>
             </div>
-            <div id="milestone2">
-                <h2>Milestone 2</h2>
+            <p>
+                <button class='btn btn-primary' type='button' data-toggle='collapse' data-target='#milestone2' aria-expanded='false' aria-controls='milestone2'><h2>Milestone 2</h2></button>
+            </p>
+            <div class='collapse' id="milestone2">
                 <div class="added">
                     <h3>Added</h3>
                     <h4>09/14/2021</h4>
@@ -110,8 +114,10 @@
                     <p>I found CSS layout (and Bootstrap) simple in concept, but complicated and a bit frustrating when applied to an entire page (or more). I'd hoped to set up a simple but clean layout for my page, but I've had to settle for smaller improvements. Likely, I tried to do too much at once, and should instead work on a plan for specific items.</p>
                 </div>
             </div>
-            <div id="milestone3">
-                <h2>Milestone 3</h2>
+            <p>
+                <button class='btn btn-primary' type='button' data-toggle='collapse' data-target='#milestone3' aria-expanded='false' aria-controls='milestone3'><h2>Milestone 3</h2></button>
+            </p>
+            <div class='collapse' id="milestone3">
                 <div class="added">
                     <h3>Added</h3>
                     <h4>09/23/2021</h4>
