padding added, collapsing added/changed sections

--- a/Changelog.html
+++ b/Changelog.html
@@ -38,13 +38,15 @@
             <h1>Change Log</h1>
             <p>All notable changes to this portfolio will be documented in this file.</p>
         </header>
-        <main>
+        <main class='changelog'>
             <p>
                 <button class='btn btn-primary' type='button' data-toggle='collapse' data-target='#milestone1' aria-expanded='false' aria-controls='milestone1'><h2>Milestone 1</h2></button>
             </p>
             <div class='collapse' id="milestone1">
-                <div class="added">
-                    <h3>Added</h3>
+                <p>
+                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#addedM1' aria-expanded='false' aria-controls='addedM1'><h3>Added</h3></button>
+                </p>
+                <div class="collapse added" id='addedM1'>
                     <h4>08/31/2021</h4>
                     <p>Installed NodeJS</p>
                     <p>Installed and completed Hello, World in Typescript</p>
@@ -76,8 +78,10 @@
                     <p>-Added index.html as main page file</p>
                     <br>
                 </div>
-                <div class="changed">
-                    <h3>Changed</h3>
+                <p>
+                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#changedM1' aria-expanded='false' aria-controls='changedM1'><h3>Changed</h3></button>
+                </p>
+                <div class="collapse added" id='changedM1'>
                     <h4>09/09/2021</h4>
                     <p>-Revised README.md to use HTML instead of Markdown.</p>
                     <br>
@@ -87,7 +91,10 @@
                 <button class='btn btn-primary' type='button' data-toggle='collapse' data-target='#milestone2' aria-expanded='false' aria-controls='milestone2'><h2>Milestone 2</h2></button>
             </p>
             <div class='collapse' id="milestone2">
-                <div class="added">
+                <p>
+                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#addedM2' aria-expanded='false' aria-controls='addedM2'><h3>Added</h3></button>
+                </p>
+                <div class="collapse added" id='addedM2'>
                     <h3>Added</h3>
                     <h4>09/14/2021</h4>
                     <p>-Completed <a href="https://www.codecademy.com/learn/learn-css">Codecademy's CSS tutorial</a></p>
@@ -99,8 +106,10 @@
                     <img src="./media/Bootstrap Complete_Linderman.png" style="width:400px;height:auto;"/>
                     <br>
                 </div>
-                <div class="changed">
-                    <h3>Changed</h3>
+                <p>
+                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#changedM2' aria-expanded='false' aria-controls='changedM2'><h3>Changed</h3></button>
+                </p>
+                <div class="collapse added" id='changedM2'>
                     <h4>09/14/2021</h4>
                     <p>-Removed Readme.md.</p>
                     <br>
@@ -118,15 +127,19 @@
                 <button class='btn btn-primary' type='button' data-toggle='collapse' data-target='#milestone3' aria-expanded='false' aria-controls='milestone3'><h2>Milestone 3</h2></button>
             </p>
             <div class='collapse' id="milestone3">
-                <div class="added">
-                    <h3>Added</h3>
+                <p>
+                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#addedM3' aria-expanded='false' aria-controls='addedM3'><h3>Added</h3></button>
+                </p>
+                <div class="collapse added" id='addedM3'>
                     <h4>09/23/2021</h4>
                     <p>-Completed <a href="https://www.codecademy.com/learn/learn-typescript">Codecademy's Typescript tutorial</a></p>
                     <img src="./media/Typescript Complete_Linderman.png" style="width:400px;height:auto;"/>
                     <br>
                 </div>
-                <div class="changed">
-                    <h3>Changed</h3>
+                <p>
+                    <button class='btn btn-success' type='button' data-toggle='collapse' data-target='#changedM3' aria-expanded='false' aria-controls='changedM3'><h3>Changed</h3></button>
+                </p>
+                <div class="collapse added" id='changedM3'>
                     <br>
                 </div>
                 <div class='notes'>
