--- a/Changelog.html
+++ b/Changelog.html
@@ -40,7 +40,9 @@
         </header>
         <main class='changelog'>
             <p>
-                <button class='btn btn-primary' type='button' data-toggle='collapse' data-target='#milestone1' aria-expanded='false' aria-controls='milestone1'><h2>Milestone 1</h2></button>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#milestone1" aria-expanded="false" aria-controls="milestone1">
+                    Milestone 1
+                </button>
             </p>
             <div class='collapse' id="milestone1">
                 <p>
